--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
         <li><%= link_to t("static_pages.home.title"), root_path %></li>
         <li><%= link_to t("static_pages.help.title"), help_path %></li>
         <% if logged_in? %>
+          <li><%= link_to t(".users"), "#" %></li>
           <li class="dropdown">
             <a href="#" id="account" class="dropdown-toggle">
               <%= t(".account") %> <b class="caret"></b>
