--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,3 @@
-<h1>User#password_reset</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<h1><%= t "password_reset.password.reset" %></h1>
+<%= link_to t("password_reset.password.reset") , edit_password_reset_url(id: @user.reset_token,
+                                                      email: @user.email) %>
